--- a/index.html
+++ b/index.html
@@ -1,19 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Tejas's Portfolio</title>
-    </head>
+<meta charset="UTF-8">
+<title>My Resume</title>
+<head>
     <body>
-        <h1>Tejas's Portfolio</h1>
-        <h2>I'm a web developer</h2>
-        <hr />
-        <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-        <img src="./assets/images/movie-ranking.png" />
-        <h3><a href="./public/birthday-invite.html">Birhtday Invite Project</a></h3>
-        <img src="./assets/images/birthday-invite.png" />
-        <hr />
-        <h4><a href="./public/about.html">About Me</a></h4>
-        <h4><a href="./public/contact.html">Contact Me</a></h4>
-</html>
+    <h1>Tejas</h1>
+    <img src="./official image.jpg/" width="100" height="150" />
+    <h2> Summary</h2>
+<p>I am a hard working and dedicated individual with experience in customer service and adminstration</p>
+<hr />
+<h2>Education</h2>
+<ul>
+    <li>Bachelor of Commerce, Corporate Secretaryship - Loyola College, Univeristy of Madras(2020-2023)</li>
+</ul>
+<hr />
+<h2>Work Experience</h2>
+<ul>
+    <li><h3>HR Intern - Calvin Klein and Tommy Hilfiger Ltd.</h3></li>
 
+    <p>September 2023 - November 2023</p>
+<ul>
+    <li>Interviewed various MBA graduates for the fashion consultant role in the company via phone and F2F interviews.</li>
+    <li>Handled the campus placement drive in November for the company by inquiring with various top colleges about the availabilty of graduates.</li>   
+    <li>Was incharge of the fashion consultant team and kept a check on the daily tasks and quarterly/annual goals of the team.</li>
+</ul>
+<li><h3>Quality Assurance Associate - Amazon</h3>
+    <p>January 2024 - Present</p>
+    <ul>
+        <li>Regression & Sanity testing Amazon's Workdocs software.</li>
+        <li>Working on optimization and automation.</li>
+        <li>Experience with testrail and creating test suites and analysing them</li>
+        <li>Testing on various devices and platforms</li>
+        <li>Testing Amazon's Chime software development kit.</li>
+        <li>Worked with the developers of the softwares to create an issue and bug free experience for customers</li>
+        <li>Testing Javascript SDK for chime meetings</li>
+
+    </ul>
+</li>
+</ul>
+<hr />
+<h2>Skills</h2>
+<ul>
+    <li>Regression testing ⭐️⭐️⭐️⭐️⭐️</li>
+    <li>Sanity testing⭐️⭐️⭐️⭐️⭐️</li>
+    <li>Microsoft Office suite ⭐️⭐️⭐️⭐️</li>
+    <li>Communication Skills⭐️⭐️⭐️⭐️⭐️</li>
+    <li>Harworking and dedicated⭐️⭐️⭐️⭐️⭐️</li>
+</ul>
+<hr />
+<h2>Awards and Certifications</h2>
+<ul>
+    <li>Employee of the month for May 2024 - Amazon</li>
+</ul>
+<hr />
+<h2>Other</h2>
+<ul>
+    <li><a href="./about.html">My Hobbies</a></li>
+    <li><a href="./contact.html">Contact Me</a></li>
+</ul>
+<p>© Tejas. All rights reserved</p>
+</body>
+    
+
+</head>
